--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -13,10 +13,35 @@
 @using Blazored.Modal
 @using Blazored.Modal.Services
 @using lunchBlazor.Shared.Models
-@using lunchBlazor.Client.Services.DepartemenService
-@using lunchBlazor.Client.Services.DivisiService
 @using CurrieTechnologies.Razor.SweetAlert2
 @using Sieve.Models
+@using lunchBlazor.Client.helper
+
+@* pages *@
 @using lunchBlazor.Client.Pages.Pengajuan_MPP.Components
+
+@* Services *@
+@using lunchBlazor.Client.Services.DepartemenService
+@using lunchBlazor.Client.Services.DivisiService
+@using lunchBlazor.Client.Services.PosisiService
+@using lunchBlazor.Client.Services.GolonganService
+@using lunchBlazor.Client.Services.LokasiService
+@using lunchBlazor.Client.Services.StatusService
+@using lunchBlazor.Client.Services.JenisMppService
+@using lunchBlazor.Client.Services.JenisPermintaanService
+@using lunchBlazor.Client.Services.PendidikanService
+@using lunchBlazor.Client.Services.JurusanPendidikanService
+@using lunchBlazor.Client.Services.SumberPemenuhanService
+
+@* Components *@
 @using lunchBlazor.Client.Pages.Master_Data.Components.Departemen
 @using lunchBlazor.Client.Pages.Master_Data.Components.Divisi
+@using lunchBlazor.Client.Pages.Master_Data.Components.Posisi
+@using lunchBlazor.Client.Pages.Master_Data.Components.Golongan
+@using lunchBlazor.Client.Pages.Master_Data.Components.Lokasi
+@using lunchBlazor.Client.Pages.Master_Data.Components.Status
+@using lunchBlazor.Client.Pages.Master_Data.Components.JenisMpp
+@using lunchBlazor.Client.Pages.Master_Data.Components.JenisPermintaan
+@using lunchBlazor.Client.Pages.Master_Data.Components.Pendidikan
+@using lunchBlazor.Client.Pages.Master_Data.Components.JurusanPendidikan
+@using lunchBlazor.Client.Pages.Master_Data.Components.Sumber_Pemenuhan
