--- a/Client/Pages/Master Data/Components/Divisi/Form-divisi.razor
+++ b/Client/Pages/Master Data/Components/Divisi/Form-divisi.razor
@@ -35,7 +35,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
-                        id="closeButton">Close</button>
+                        id="closeButtonDivisi">Close</button>
                     <button type="submit" class="btn btn-primary">Save changes</button>
                 </div>
                 <DataAnnotationsValidator />
