--- a/Client/Pages/Master Data/Components/Golongan/View-golongan.razor
+++ b/Client/Pages/Master Data/Components/Golongan/View-golongan.razor
@@ -1,4 +1,4 @@
-@inject DivisiService DivisiService
+@inject GolonganService GolonganService
 @inject IModalService modal
 @inject SweetAlertService Swal
 @inject IJSRuntime JSRuntime
@@ -6,46 +6,46 @@
 <div class="row">
     <div class="col-12">
         <div class="fw-bold">
-            Divisi
+            Golongan
         </div>
         <div class="border-title"></div>
     </div>
 
     <div class="col-12 mt-4">
         <div class="d-flex justify-content-end">
-            <Button type="button" Label="Tambah" bold data-bs-toggle="modal" data-bs-target="#formDivisi"
-                onClick="HandleAddDivisi" />
-        </div>
-        <div>
-            <Table table=@table HandleClickPrevious=" Previous" HandleClickNext="Next"
-                HandlePageSizeChange="HandlePageSizeChange" mySieveModel="mySieveModel"
-                totalCountData="DivisiService.Divisies.totalCountData" HandleEditBtn="HandleEditBtnDivisi" IsModalEdit
-                modalEditNameId="formDivisi" HandleDeleteBtn="HandleDeleteDivisi" />
-        </div>
-    </div>
-</div>
+            <Button type="button" Label="Tambah" bold data-bs-toggle="modal" data-bs-target="#formGolongan"
+                 onClick="HandleAddGolongan" />
+         </div>
+         <div>
+             <Table table=@table HandleClickPrevious=" Previous" HandleClickNext="Next"
+                 HandlePageSizeChange="HandlePageSizeChange" mySieveModel="mySieveModel"
+                 totalCountData="GolonganService.Golongans.totalCountData" HandleEditBtn="HandleEditBtnGolongan"
+                    IsModalEdit modalEditNameId="formGolongan" HandleDeleteBtn="HandleDeleteGolongan" />
+         </div>
+     </div>
+ </div>
 
-<Form_divisi Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
+ <Form_golongan Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
 
-@code {
+ @code {
 
-    private Divisi formData = new Divisi();
-    private async void HandleEditBtnDivisi(string id)
+    private Golongan formData = new Golongan();
+    private async void HandleEditBtnGolongan(string id)
     {
         AppliationState.Id = id;
         if (AppliationState.Id is not null)
         {
             mySieveModel.Filters = $"Id=={AppliationState.Id}";
-            await DivisiService.GetDivisiById(mySieveModel);
-            formData = DivisiService.Divisi;
+            await GolonganService.GetGolonganById(mySieveModel);
+            formData = GolonganService.Golongan;
         }
         StateHasChanged();
     }
 
-    private void HandleAddDivisi()
+    private void HandleAddGolongan()
     {
         AppliationState.Id = null;
-        formData = new Divisi();
+        formData = new Golongan();
         StateHasChanged();
     }
 
@@ -57,34 +57,34 @@
             PageSize = 5,
         };
     private TableModelViewModel table = new TableModelViewModel();
-    private List<Divisi> divisiItems = new List<Divisi>();
+    private List<Golongan> departemenItems = new List<Golongan>();
 
 
-    private async Task HandleFormSubmission(Divisi formData)
+    private async Task HandleFormSubmission(Golongan formData)
     {
         mySieveModel.Filters = "";
         if (AppliationState.Id is null)
         {
-            var result = await DivisiService.CreateDivisi(formData);
+            var result = await GolonganService.CreateGolongan(formData);
             if (result.ReasonPhrase == "OK")
             {
-                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonDivisi");
-                //await LoadDivisi(mySieveModel);
+                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonGolongan");
+                //await LoadGolongan(mySieveModel);
             }
         }
         else
         {
-            var result = await DivisiService.UpdateDivisi(AppliationState.Id, formData);
+            var result = await GolonganService.UpdateGolongan(AppliationState.Id, formData);
             if (result.ReasonPhrase == "OK")
             {
-                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonDivisi");
+                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonGolongan");
             }
         }
-        await LoadDivisi(mySieveModel);
+        await LoadGolongan(mySieveModel);
         StateHasChanged();
     }
 
-    private async void HandleDeleteDivisi(string id)
+    private async void HandleDeleteGolongan(string id)
     {
         var result = await Swal.FireAsync(new SweetAlertOptions
             {
@@ -97,8 +97,8 @@
 
         if (confirm)
         {
-            await DivisiService.DeleteDivisi(id);
-            await LoadDivisi(mySieveModel);
+            await GolonganService.DeleteGolongan(id);
+            await LoadGolongan(mySieveModel);
             StateHasChanged();
         }
     }
@@ -106,12 +106,12 @@
     private async Task Next()
     {
         mySieveModel.Page++; // Increment the page
-        await LoadDivisi(mySieveModel); // Call LoadDivisi with the updated page
+        await LoadGolongan(mySieveModel); // Call LoadGolongan with the updated page
     }
     private async Task Previous()
     {
         mySieveModel.Page--;
-        await LoadDivisi(mySieveModel);
+        await LoadGolongan(mySieveModel);
     }
 
     private async Task HandlePageSizeChange(ChangeEventArgs e)
@@ -120,26 +120,26 @@
         {
             mySieveModel.Page = 1;
             mySieveModel.PageSize = selectedPageSize;
-            await LoadDivisi(mySieveModel);
+            await LoadGolongan(mySieveModel);
         }
     }
     protected override async Task OnInitializedAsync()
     {
-        await LoadDivisi(mySieveModel);
+        await LoadGolongan(mySieveModel);
     }
 
 
-    private async Task LoadDivisi(SieveModel sieveModel)
+    private async Task LoadGolongan(SieveModel sieveModel)
     {
         try
         {
-            await DivisiService.LoadDivisi(sieveModel);
+            await GolonganService.LoadGolongan(sieveModel);
 
-            divisiItems = DivisiService.Divisies.Items;
+            departemenItems = GolonganService.Golongans.Items;
 
             table.Data = new List<List<object>>();
 
-            foreach (var item in divisiItems)
+            foreach (var item in departemenItems)
             {
                 var rowData = new List<object>
 {
