--- a/Client/Pages/Master Data/Components/JenisMpp/View-jenis-mpp.razor
+++ b/Client/Pages/Master Data/Components/JenisMpp/View-jenis-mpp.razor
@@ -1,4 +1,4 @@
-@inject DivisiService DivisiService
+@inject JenisMppService JenisMppService
 @inject IModalService modal
 @inject SweetAlertService Swal
 @inject IJSRuntime JSRuntime
@@ -6,46 +6,46 @@
 <div class="row">
     <div class="col-12">
         <div class="fw-bold">
-            Divisi
+            Jenis Mpp
         </div>
         <div class="border-title"></div>
     </div>
 
     <div class="col-12 mt-4">
         <div class="d-flex justify-content-end">
-            <Button type="button" Label="Tambah" bold data-bs-toggle="modal" data-bs-target="#formDivisi"
-                onClick="HandleAddDivisi" />
+            <Button type="button" Label="Tambah" bold data-bs-toggle="modal" data-bs-target="#formJenisMpp"
+                onClick="HandleAddJenisMpp" />
         </div>
         <div>
-            <Table table=@table HandleClickPrevious=" Previous" HandleClickNext="Next"
+            <Table table=@table HandleClickPrevious="Previous" HandleClickNext="Next"
                 HandlePageSizeChange="HandlePageSizeChange" mySieveModel="mySieveModel"
-                totalCountData="DivisiService.Divisies.totalCountData" HandleEditBtn="HandleEditBtnDivisi" IsModalEdit
-                modalEditNameId="formDivisi" HandleDeleteBtn="HandleDeleteDivisi" />
+                totalCountData="JenisMppService.JenisMpps.totalCountData" HandleEditBtn="HandleEditBtnJenisMpp"
+                IsModalEdit modalEditNameId="formJenisMpp" HandleDeleteBtn="HandleDeleteJenisMpp" />
         </div>
     </div>
 </div>
 
-<Form_divisi Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
+<Form_jenis_mpp Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
 
 @code {
 
-    private Divisi formData = new Divisi();
-    private async void HandleEditBtnDivisi(string id)
+    private JenisMpp formData = new JenisMpp();
+    private async void HandleEditBtnJenisMpp(string id)
     {
         AppliationState.Id = id;
         if (AppliationState.Id is not null)
         {
             mySieveModel.Filters = $"Id=={AppliationState.Id}";
-            await DivisiService.GetDivisiById(mySieveModel);
-            formData = DivisiService.Divisi;
+            await JenisMppService.GetJenisMppById(mySieveModel);
+            formData = JenisMppService.JenisMpp;
         }
         StateHasChanged();
     }
 
-    private void HandleAddDivisi()
+    private void HandleAddJenisMpp()
     {
         AppliationState.Id = null;
-        formData = new Divisi();
+        formData = new JenisMpp();
         StateHasChanged();
     }
 
@@ -57,34 +57,34 @@
             PageSize = 5,
         };
     private TableModelViewModel table = new TableModelViewModel();
-    private List<Divisi> divisiItems = new List<Divisi>();
+    private List<JenisMpp> departemenItems = new List<JenisMpp>();
 
 
-    private async Task HandleFormSubmission(Divisi formData)
+    private async Task HandleFormSubmission(JenisMpp formData)
     {
         mySieveModel.Filters = "";
         if (AppliationState.Id is null)
         {
-            var result = await DivisiService.CreateDivisi(formData);
+            var result = await JenisMppService.CreateJenisMpp(formData);
             if (result.ReasonPhrase == "OK")
             {
-                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonDivisi");
-                //await LoadDivisi(mySieveModel);
+                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonJenisMpp");
+                //await LoadJenisMpp(mySieveModel);
             }
         }
         else
         {
-            var result = await DivisiService.UpdateDivisi(AppliationState.Id, formData);
+            var result = await JenisMppService.UpdateJenisMpp(AppliationState.Id, formData);
             if (result.ReasonPhrase == "OK")
             {
-                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonDivisi");
+                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonJenisMpp");
             }
         }
-        await LoadDivisi(mySieveModel);
+        await LoadJenisMpp(mySieveModel);
         StateHasChanged();
     }
 
-    private async void HandleDeleteDivisi(string id)
+    private async void HandleDeleteJenisMpp(string id)
     {
         var result = await Swal.FireAsync(new SweetAlertOptions
             {
@@ -97,8 +97,8 @@
 
         if (confirm)
         {
-            await DivisiService.DeleteDivisi(id);
-            await LoadDivisi(mySieveModel);
+            await JenisMppService.DeleteJenisMpp(id);
+            await LoadJenisMpp(mySieveModel);
             StateHasChanged();
         }
     }
@@ -106,12 +106,12 @@
     private async Task Next()
     {
         mySieveModel.Page++; // Increment the page
-        await LoadDivisi(mySieveModel); // Call LoadDivisi with the updated page
+        await LoadJenisMpp(mySieveModel); // Call LoadJenisMpp with the updated page
     }
     private async Task Previous()
     {
         mySieveModel.Page--;
-        await LoadDivisi(mySieveModel);
+        await LoadJenisMpp(mySieveModel);
     }
 
     private async Task HandlePageSizeChange(ChangeEventArgs e)
@@ -120,26 +120,26 @@
         {
             mySieveModel.Page = 1;
             mySieveModel.PageSize = selectedPageSize;
-            await LoadDivisi(mySieveModel);
+            await LoadJenisMpp(mySieveModel);
         }
     }
     protected override async Task OnInitializedAsync()
     {
-        await LoadDivisi(mySieveModel);
+        await LoadJenisMpp(mySieveModel);
     }
 
 
-    private async Task LoadDivisi(SieveModel sieveModel)
+    private async Task LoadJenisMpp(SieveModel sieveModel)
     {
         try
         {
-            await DivisiService.LoadDivisi(sieveModel);
+            await JenisMppService.LoadJenisMpp(sieveModel);
 
-            divisiItems = DivisiService.Divisies.Items;
+            departemenItems = JenisMppService.JenisMpps.Items;
 
             table.Data = new List<List<object>>();
 
-            foreach (var item in divisiItems)
+            foreach (var item in departemenItems)
             {
                 var rowData = new List<object>
 {
