--- a/Client/Pages/Master Data/Components/JenisPermintaan/View-jenis-permintaan.razor
+++ b/Client/Pages/Master Data/Components/JenisPermintaan/View-jenis-permintaan.razor
@@ -1,4 +1,4 @@
-@inject DivisiService DivisiService
+@inject JenisPermintaanService JenisPermintaanService
 @inject IModalService modal
 @inject SweetAlertService Swal
 @inject IJSRuntime JSRuntime
@@ -6,46 +6,47 @@
 <div class="row">
     <div class="col-12">
         <div class="fw-bold">
-            Divisi
+            Jenis Permintaan
         </div>
         <div class="border-title"></div>
     </div>
 
     <div class="col-12 mt-4">
         <div class="d-flex justify-content-end">
-            <Button type="button" Label="Tambah" bold data-bs-toggle="modal" data-bs-target="#formDivisi"
-                onClick="HandleAddDivisi" />
+            <Button type="button" Label="Tambah" bold data-bs-toggle="modal" data-bs-target="#formJenisPermintaan"
+                onClick="HandleAddJenisPermintaan" />
         </div>
         <div>
-            <Table table=@table HandleClickPrevious=" Previous" HandleClickNext="Next"
+            <Table table=@table HandleClickPrevious="Previous" HandleClickNext="Next"
                 HandlePageSizeChange="HandlePageSizeChange" mySieveModel="mySieveModel"
-                totalCountData="DivisiService.Divisies.totalCountData" HandleEditBtn="HandleEditBtnDivisi" IsModalEdit
-                modalEditNameId="formDivisi" HandleDeleteBtn="HandleDeleteDivisi" />
+                totalCountData="JenisPermintaanService.JenisPermintaans.totalCountData"
+                HandleEditBtn="HandleEditBtnJenisPermintaan" IsModalEdit modalEditNameId="formJenisPermintaan"
+                HandleDeleteBtn="HandleDeleteJenisPermintaan" />
         </div>
     </div>
 </div>
 
-<Form_divisi Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
+<Form_jenis_permintaan Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
 
 @code {
 
-    private Divisi formData = new Divisi();
-    private async void HandleEditBtnDivisi(string id)
+    private JenisPermintaan formData = new JenisPermintaan();
+    private async void HandleEditBtnJenisPermintaan(string id)
     {
         AppliationState.Id = id;
         if (AppliationState.Id is not null)
         {
             mySieveModel.Filters = $"Id=={AppliationState.Id}";
-            await DivisiService.GetDivisiById(mySieveModel);
-            formData = DivisiService.Divisi;
+            await JenisPermintaanService.GetJenisPermintaanById(mySieveModel);
+            formData = JenisPermintaanService.JenisPermintaan;
         }
         StateHasChanged();
     }
 
-    private void HandleAddDivisi()
+    private void HandleAddJenisPermintaan()
     {
         AppliationState.Id = null;
-        formData = new Divisi();
+        formData = new JenisPermintaan();
         StateHasChanged();
     }
 
@@ -57,34 +58,34 @@
             PageSize = 5,
         };
     private TableModelViewModel table = new TableModelViewModel();
-    private List<Divisi> divisiItems = new List<Divisi>();
+    private List<JenisPermintaan> departemenItems = new List<JenisPermintaan>();
 
 
-    private async Task HandleFormSubmission(Divisi formData)
+    private async Task HandleFormSubmission(JenisPermintaan formData)
     {
         mySieveModel.Filters = "";
         if (AppliationState.Id is null)
         {
-            var result = await DivisiService.CreateDivisi(formData);
+            var result = await JenisPermintaanService.CreateJenisPermintaan(formData);
             if (result.ReasonPhrase == "OK")
             {
-                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonDivisi");
-                //await LoadDivisi(mySieveModel);
+                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonJenisPermintaan");
+                //await LoadJenisPermintaan(mySieveModel);
             }
         }
         else
         {
-            var result = await DivisiService.UpdateDivisi(AppliationState.Id, formData);
+            var result = await JenisPermintaanService.UpdateJenisPermintaan(AppliationState.Id, formData);
             if (result.ReasonPhrase == "OK")
             {
-                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonDivisi");
+                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonJenisPermintaan");
             }
         }
-        await LoadDivisi(mySieveModel);
+        await LoadJenisPermintaan(mySieveModel);
         StateHasChanged();
     }
 
-    private async void HandleDeleteDivisi(string id)
+    private async void HandleDeleteJenisPermintaan(string id)
     {
         var result = await Swal.FireAsync(new SweetAlertOptions
             {
@@ -97,8 +98,8 @@
 
         if (confirm)
         {
-            await DivisiService.DeleteDivisi(id);
-            await LoadDivisi(mySieveModel);
+            await JenisPermintaanService.DeleteJenisPermintaan(id);
+            await LoadJenisPermintaan(mySieveModel);
             StateHasChanged();
         }
     }
@@ -106,12 +107,12 @@
     private async Task Next()
     {
         mySieveModel.Page++; // Increment the page
-        await LoadDivisi(mySieveModel); // Call LoadDivisi with the updated page
+        await LoadJenisPermintaan(mySieveModel); // Call LoadJenisPermintaan with the updated page
     }
     private async Task Previous()
     {
         mySieveModel.Page--;
-        await LoadDivisi(mySieveModel);
+        await LoadJenisPermintaan(mySieveModel);
     }
 
     private async Task HandlePageSizeChange(ChangeEventArgs e)
@@ -120,26 +121,26 @@
         {
             mySieveModel.Page = 1;
             mySieveModel.PageSize = selectedPageSize;
-            await LoadDivisi(mySieveModel);
+            await LoadJenisPermintaan(mySieveModel);
         }
     }
     protected override async Task OnInitializedAsync()
     {
-        await LoadDivisi(mySieveModel);
+        await LoadJenisPermintaan(mySieveModel);
     }
 
 
-    private async Task LoadDivisi(SieveModel sieveModel)
+    private async Task LoadJenisPermintaan(SieveModel sieveModel)
     {
         try
         {
-            await DivisiService.LoadDivisi(sieveModel);
+            await JenisPermintaanService.LoadJenisPermintaan(sieveModel);
 
-            divisiItems = DivisiService.Divisies.Items;
+            departemenItems = JenisPermintaanService.JenisPermintaans.Items;
 
             table.Data = new List<List<object>>();
 
-            foreach (var item in divisiItems)
+            foreach (var item in departemenItems)
             {
                 var rowData = new List<object>
 {
