--- a/Client/Pages/Master Data/Components/Pendidikan/View-pendidikan.razor
+++ b/Client/Pages/Master Data/Components/Pendidikan/View-pendidikan.razor
@@ -1,4 +1,4 @@
-@inject DivisiService DivisiService
+@inject PendidikanService PendidikanService
 @inject IModalService modal
 @inject SweetAlertService Swal
 @inject IJSRuntime JSRuntime
@@ -6,46 +6,46 @@
 <div class="row">
     <div class="col-12">
         <div class="fw-bold">
-            Divisi
+            Pendidikan
         </div>
         <div class="border-title"></div>
     </div>
 
     <div class="col-12 mt-4">
         <div class="d-flex justify-content-end">
-            <Button type="button" Label="Tambah" bold data-bs-toggle="modal" data-bs-target="#formDivisi"
-                onClick="HandleAddDivisi" />
+            <Button type="button" Label="Tambah" bold data-bs-toggle="modal" data-bs-target="#formPendidikan"
+                onClick="HandleAddPendidikan" />
         </div>
         <div>
             <Table table=@table HandleClickPrevious=" Previous" HandleClickNext="Next"
                 HandlePageSizeChange="HandlePageSizeChange" mySieveModel="mySieveModel"
-                totalCountData="DivisiService.Divisies.totalCountData" HandleEditBtn="HandleEditBtnDivisi" IsModalEdit
-                modalEditNameId="formDivisi" HandleDeleteBtn="HandleDeleteDivisi" />
+                totalCountData="PendidikanService.Pendidikans.totalCountData" HandleEditBtn="HandleEditBtnPendidikan"
+                IsModalEdit modalEditNameId="formPendidikan" HandleDeleteBtn="HandleDeletePendidikan" />
         </div>
     </div>
 </div>
 
-<Form_divisi Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
+<Form_pendidikan Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
 
 @code {
 
-    private Divisi formData = new Divisi();
-    private async void HandleEditBtnDivisi(string id)
+    private Pendidikan formData = new Pendidikan();
+    private async void HandleEditBtnPendidikan(string id)
     {
         AppliationState.Id = id;
         if (AppliationState.Id is not null)
         {
             mySieveModel.Filters = $"Id=={AppliationState.Id}";
-            await DivisiService.GetDivisiById(mySieveModel);
-            formData = DivisiService.Divisi;
+            await PendidikanService.GetPendidikanById(mySieveModel);
+            formData = PendidikanService.Pendidikan;
         }
         StateHasChanged();
     }
 
-    private void HandleAddDivisi()
+    private void HandleAddPendidikan()
     {
         AppliationState.Id = null;
-        formData = new Divisi();
+        formData = new Pendidikan();
         StateHasChanged();
     }
 
@@ -57,35 +57,36 @@
             PageSize = 5,
         };
     private TableModelViewModel table = new TableModelViewModel();
-    private List<Divisi> divisiItems = new List<Divisi>();
+    private List<Pendidikan> PendidikanItems = new List<Pendidikan>();
 
 
-    private async Task HandleFormSubmission(Divisi formData)
+    private async Task HandleFormSubmission(Pendidikan formData)
     {
         mySieveModel.Filters = "";
         if (AppliationState.Id is null)
         {
-            var result = await DivisiService.CreateDivisi(formData);
+            var result = await PendidikanService.CreatePendidikan(formData);
             if (result.ReasonPhrase == "OK")
             {
-                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonDivisi");
-                //await LoadDivisi(mySieveModel);
+                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonPendidikan");
+                //await LoadPendidikan(mySieveModel);
             }
         }
         else
         {
-            var result = await DivisiService.UpdateDivisi(AppliationState.Id, formData);
+            var result = await PendidikanService.UpdatePendidikan(AppliationState.Id, formData);
             if (result.ReasonPhrase == "OK")
             {
-                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonDivisi");
+                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonPendidikan");
             }
         }
-        await LoadDivisi(mySieveModel);
+        await LoadPendidikan(mySieveModel);
         StateHasChanged();
     }
 
-    private async void HandleDeleteDivisi(string id)
+    private async void HandleDeletePendidikan(string id)
     {
+        Console.WriteLine($"Deletteee option clicked for item with value: {id}");
         var result = await Swal.FireAsync(new SweetAlertOptions
             {
                 Title = "Are you sure to delete this item?",
@@ -97,8 +98,8 @@
 
         if (confirm)
         {
-            await DivisiService.DeleteDivisi(id);
-            await LoadDivisi(mySieveModel);
+            await PendidikanService.DeletePendidikan(id);
+            await LoadPendidikan(mySieveModel);
             StateHasChanged();
         }
     }
@@ -106,12 +107,12 @@
     private async Task Next()
     {
         mySieveModel.Page++; // Increment the page
-        await LoadDivisi(mySieveModel); // Call LoadDivisi with the updated page
+        await LoadPendidikan(mySieveModel); // Call LoadPendidikan with the updated page
     }
     private async Task Previous()
     {
         mySieveModel.Page--;
-        await LoadDivisi(mySieveModel);
+        await LoadPendidikan(mySieveModel);
     }
 
     private async Task HandlePageSizeChange(ChangeEventArgs e)
@@ -120,26 +121,26 @@
         {
             mySieveModel.Page = 1;
             mySieveModel.PageSize = selectedPageSize;
-            await LoadDivisi(mySieveModel);
+            await LoadPendidikan(mySieveModel);
         }
     }
     protected override async Task OnInitializedAsync()
     {
-        await LoadDivisi(mySieveModel);
+        await LoadPendidikan(mySieveModel);
     }
 
 
-    private async Task LoadDivisi(SieveModel sieveModel)
+    private async Task LoadPendidikan(SieveModel sieveModel)
     {
         try
         {
-            await DivisiService.LoadDivisi(sieveModel);
+            await PendidikanService.LoadPendidikan(sieveModel);
 
-            divisiItems = DivisiService.Divisies.Items;
+            PendidikanItems = PendidikanService.Pendidikans.Items;
 
             table.Data = new List<List<object>>();
 
-            foreach (var item in divisiItems)
+            foreach (var item in PendidikanItems)
             {
                 var rowData = new List<object>
 {
