--- a/Client/Pages/Master Data/Components/Sumber Pemenuhan/View-sumber-pemenuhan.razor
+++ b/Client/Pages/Master Data/Components/Sumber Pemenuhan/View-sumber-pemenuhan.razor
@@ -1,4 +1,4 @@
-@inject DivisiService DivisiService
+@inject SumberPemenuhanService SumberPemenuhanService
 @inject IModalService modal
 @inject SweetAlertService Swal
 @inject IJSRuntime JSRuntime
@@ -6,46 +6,47 @@
 <div class="row">
     <div class="col-12">
         <div class="fw-bold">
-            Divisi
+            Sumber Pemenuhan
         </div>
         <div class="border-title"></div>
     </div>
 
     <div class="col-12 mt-4">
         <div class="d-flex justify-content-end">
-            <Button type="button" Label="Tambah" bold data-bs-toggle="modal" data-bs-target="#formDivisi"
-                onClick="HandleAddDivisi" />
+            <Button type="button" Label="Tambah" bold data-bs-toggle="modal" data-bs-target="#formSumberPemenuhan"
+                onClick="HandleAddSumberPemenuhan" />
         </div>
         <div>
             <Table table=@table HandleClickPrevious=" Previous" HandleClickNext="Next"
                 HandlePageSizeChange="HandlePageSizeChange" mySieveModel="mySieveModel"
-                totalCountData="DivisiService.Divisies.totalCountData" HandleEditBtn="HandleEditBtnDivisi" IsModalEdit
-                modalEditNameId="formDivisi" HandleDeleteBtn="HandleDeleteDivisi" />
+                totalCountData="SumberPemenuhanService.SumberPemenuhans.totalCountData"
+                HandleEditBtn="HandleEditBtnSumberPemenuhan" IsModalEdit modalEditNameId="formSumberPemenuhan"
+                HandleDeleteBtn="HandleDeleteSumberPemenuhan" />
         </div>
     </div>
 </div>
 
-<Form_divisi Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
+<Form_sumber_pemenuhan Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
 
 @code {
 
-    private Divisi formData = new Divisi();
-    private async void HandleEditBtnDivisi(string id)
+    private SumberPemenuhan formData = new SumberPemenuhan();
+    private async void HandleEditBtnSumberPemenuhan(string id)
     {
         AppliationState.Id = id;
         if (AppliationState.Id is not null)
         {
             mySieveModel.Filters = $"Id=={AppliationState.Id}";
-            await DivisiService.GetDivisiById(mySieveModel);
-            formData = DivisiService.Divisi;
+            await SumberPemenuhanService.GetSumberPemenuhanById(mySieveModel);
+            formData = SumberPemenuhanService.SumberPemenuhan;
         }
         StateHasChanged();
     }
 
-    private void HandleAddDivisi()
+    private void HandleAddSumberPemenuhan()
     {
         AppliationState.Id = null;
-        formData = new Divisi();
+        formData = new SumberPemenuhan();
         StateHasChanged();
     }
 
@@ -57,35 +58,36 @@
             PageSize = 5,
         };
     private TableModelViewModel table = new TableModelViewModel();
-    private List<Divisi> divisiItems = new List<Divisi>();
+    private List<SumberPemenuhan> SumberPemenuhanItems = new List<SumberPemenuhan>();
 
 
-    private async Task HandleFormSubmission(Divisi formData)
+    private async Task HandleFormSubmission(SumberPemenuhan formData)
     {
         mySieveModel.Filters = "";
         if (AppliationState.Id is null)
         {
-            var result = await DivisiService.CreateDivisi(formData);
+            var result = await SumberPemenuhanService.CreateSumberPemenuhan(formData);
             if (result.ReasonPhrase == "OK")
             {
-                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonDivisi");
-                //await LoadDivisi(mySieveModel);
+                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonSumberPemenuhan");
+                //await LoadSumberPemenuhan(mySieveModel);
             }
         }
         else
         {
-            var result = await DivisiService.UpdateDivisi(AppliationState.Id, formData);
+            var result = await SumberPemenuhanService.UpdateSumberPemenuhan(AppliationState.Id, formData);
             if (result.ReasonPhrase == "OK")
             {
-                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonDivisi");
+                JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonSumberPemenuhan");
             }
         }
-        await LoadDivisi(mySieveModel);
+        await LoadSumberPemenuhan(mySieveModel);
         StateHasChanged();
     }
 
-    private async void HandleDeleteDivisi(string id)
+    private async void HandleDeleteSumberPemenuhan(string id)
     {
+        Console.WriteLine($"Deletteee option clicked for item with value: {id}");
         var result = await Swal.FireAsync(new SweetAlertOptions
             {
                 Title = "Are you sure to delete this item?",
@@ -97,8 +99,8 @@
 
         if (confirm)
         {
-            await DivisiService.DeleteDivisi(id);
-            await LoadDivisi(mySieveModel);
+            await SumberPemenuhanService.DeleteSumberPemenuhan(id);
+            await LoadSumberPemenuhan(mySieveModel);
             StateHasChanged();
         }
     }
@@ -106,12 +108,12 @@
     private async Task Next()
     {
         mySieveModel.Page++; // Increment the page
-        await LoadDivisi(mySieveModel); // Call LoadDivisi with the updated page
+        await LoadSumberPemenuhan(mySieveModel); // Call LoadSumberPemenuhan with the updated page
     }
     private async Task Previous()
     {
         mySieveModel.Page--;
-        await LoadDivisi(mySieveModel);
+        await LoadSumberPemenuhan(mySieveModel);
     }
 
     private async Task HandlePageSizeChange(ChangeEventArgs e)
@@ -120,26 +122,26 @@
         {
             mySieveModel.Page = 1;
             mySieveModel.PageSize = selectedPageSize;
-            await LoadDivisi(mySieveModel);
+            await LoadSumberPemenuhan(mySieveModel);
         }
     }
     protected override async Task OnInitializedAsync()
     {
-        await LoadDivisi(mySieveModel);
+        await LoadSumberPemenuhan(mySieveModel);
     }
 
 
-    private async Task LoadDivisi(SieveModel sieveModel)
+    private async Task LoadSumberPemenuhan(SieveModel sieveModel)
     {
         try
         {
-            await DivisiService.LoadDivisi(sieveModel);
+            await SumberPemenuhanService.LoadSumberPemenuhan(sieveModel);
 
-            divisiItems = DivisiService.Divisies.Items;
+            SumberPemenuhanItems = SumberPemenuhanService.SumberPemenuhans.Items;
 
             table.Data = new List<List<object>>();
 
-            foreach (var item in divisiItems)
+            foreach (var item in SumberPemenuhanItems)
             {
                 var rowData = new List<object>
 {
