--- a/Client/Pages/Pengajuan MPP/Components/Kualifikasi-MPP.razor
+++ b/Client/Pages/Pengajuan MPP/Components/Kualifikasi-MPP.razor
@@ -1,3 +1,12 @@
 <div class="row">
     <div>Kualifikasi MPP</div>
+    @if (AppliationState.MppChildForm != null && AppliationState.MppChildForm.PosisiId != null)
+    {
+        <div>@(AppliationState.MppChildForm.PosisiId)</div>
+    }
 </div>
+
+@code {
+    [CascadingParameter]
+    public AppState AppliationState { get; set; }
+}
