--- a/Client/Pages/Pengajuan MPP/Index.razor
+++ b/Client/Pages/Pengajuan MPP/Index.razor
@@ -24,27 +24,27 @@
                     <i class="bi bi-caret-right-fill text-primary"></i>
                 </div>
                 <Button bold Label="MPP Baru" btnClass="btn-info" IsBtnIcon onClick="HandleButtonClickAdd" />
-             </div>
-         </div>
-     </div>
- </div>
- <!-- end page title -->
+            </div>
+        </div>
+    </div>
+</div>
+<!-- end page title -->
 
 
- <div class="row">
-     <div class="col-4">
-         <CardPlan labelCard="Dilanjutkan ke Sect. OPCC" />
-     </div>
-     <div class="col-4">
-         <CardPlan labelCard="Disimpan Sebagai Draft" iconCardHeader="bi-pencil-square" />
-     </div>
-     <div class="col-4">
-         <CardPlan labelCard="Pengajuan MPP Ditolak" iconCardHeader="bi-x-circle" />
-     </div>
- </div>
- <!-- end row -->
+<div class="row">
+    <div class="col-lg-4 col-md-6 col-12">
+        <CardPlan labelCard="Dilanjutkan ke Sect. OPCC" />
+    </div>
+    <div class="col-lg-4 col-md-6 col-12">
+        <CardPlan labelCard="Disimpan Sebagai Draft" iconCardHeader="bi-pencil-square" />
+    </div>
+    <div class="col-lg-4 col-md-6 col-12">
+        <CardPlan labelCard="Pengajuan MPP Ditolak" iconCardHeader="bi-x-circle" />
+    </div>
+</div>
+<!-- end row -->
 
- @code {
+@code {
     private async Task HandleButtonClickAdd(MouseEventArgs e)
     {
         Navigation.NavigateTo("/pengajuan-mpp/input-mpp");
