--- a/Client/Pages/Pengajuan MPP/Input-mpp.razor
+++ b/Client/Pages/Pengajuan MPP/Input-mpp.razor
@@ -1,5 +1,6 @@
 @page "/pengajuan-mpp/input-mpp"
 @inject NavigationManager Navigation
+@inject JenisMppService JenisMppService
 
 <PageTitle>Pengajuan MPP</PageTitle>
 
@@ -36,10 +37,21 @@
         <div class="ms-1">Auto_fill_NRP_User</div>
     </div>
     <div class="col-3 mt-4">
-        <SelectComponent label="Select an Item" listItems="listItems" />
+        @if (isSelectMppLoaded)
+        {
+            <SelectComponent label="Jenis Mpp" listItems="listItemsJenisMpp" placeholder="Pilih Jenis..." />
+        }
+        else
+        {
+            <p>Loading...</p>
+        }
     </div>
     <div class="col-3 mt-4">
-        @* <SelectComponent label="Tahun MPP" isBold placeholder="pilih tahun..." listItems="tahunMpp" /> *@
+        <div class="form-group">
+            <label class="form-label">Tahun MPP</label>
+            <input type="number" class="form-control" min="1900" max="2199" step="1" maxlength="4" minlength="4"
+                @bind="selectedYear" oninput="@HandleYearInputChange" />
+        </div>
     </div>
 </div>
 
@@ -47,29 +59,53 @@
     <div class="d-flex justify-content-between">
         <div class="fw-bold mb-3 font-size-16">Pengajuan MPP A1</div>
         <Button Label="Tambah Posisi" btnClass="btn-info" IsBtnIcon onClick="HandleButtonClickAddA1" />
-     </div>
- </div>
+    </div>
+</div>
 
- @code {
-    private List<Departemen> departemenList;
-
-    private List<dynamic> listItems;
-    protected override void OnInitialized()
+@code {
+    private int selectedYear = DateTime.Now.Year;
+    private void HandleYearInputChange()
     {
-        // Initialize departemenList
-        departemenList = new List<Departemen>
-{
-new Departemen { Id = Guid.NewGuid(), Name = "Department 1", IsActive = true },
-new Departemen { Id = Guid.NewGuid(), Name = "Department 2", IsActive = false },
-// Add more items as needed
-};
-
-        listItems = departemenList
-        .Select(departemen => (dynamic)new { Id = departemen.Id, Value = departemen.Name })
-        .ToList();
+        if (selectedYear < 1900)
+        {
+            selectedYear = DateTime.Now.Year;
+        }
+        else if (selectedYear > 2199)
+        {
+            selectedYear = DateTime.Now.Year;
+        }
     }
-    private List<string> jenisMpp = new List<string> { "MPP 1", "MPP 2", "MPP 3" };
-    private List<string> tahunMpp = new List<string> { "2020", "2021", "2022" };
+    private SieveModel mySieveModel = new SieveModel
+        {
+            Page = 1,
+            PageSize = 5,
+        };
+
+    private List<JenisMpp> jenisMppList;
+    private List<dynamic> listItemsJenisMpp;
+    private bool isSelectMppLoaded = false; // Flag to indicate if data is loaded
+
+    protected async override Task OnInitializedAsync()
+    {
+        await LoadDataAsync(); // Load data asynchronously
+    }
+
+    private async Task LoadDataAsync()
+    {
+        await JenisMppService.LoadJenisMpp(mySieveModel);
+
+        jenisMppList = JenisMppService.JenisMpps.Items;
+
+        listItemsJenisMpp = jenisMppList
+        .Select(x => (dynamic)new { Id = x.Id, Value = x.Name })
+        .ToList();
+
+        // Set the flag to indicate that data is loaded
+        isSelectMppLoaded = true;
+
+        // Notify the child component that the data is ready
+        StateHasChanged();
+    }
 
     private async Task HandleButtonClickAddA1(MouseEventArgs e)
     {
